# picoos

./: Cargo.toml  README.md  client.py  memory.x  p.py  requirements.txt
.cargo/: config.toml
Keyboard/: cargo.toml  keyboard_hal.rs  keyboard_os.r
SD_CARD/: cargo.toml  os_sdcard.rs  read.rs  write.rs
app/: main.py
pcb/: fp-info-cache  project.kicad_pcb  project.kicad_prl  project.kicad_pro  project.kicad_sch
pcb/__MACOSX/: ._project.kicad_pcb  ._project.kicad_pro  ._project.kicad_sch
pcb/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
pico-dvi-rs/: Cargo.toml
pico-dvi-rs/src/: clock.rs  demo.rs  main.rs  render.rs
sd_test/: ADD_YOUR_FIRST_FILE.md  CHOOSE_YOUR_PATH.md  Cargo.toml  DELETION_COMPLETE.md  FILESYSTEM_WRITE_GUIDE.md  FILE_DELETION_GUIDE.md  FLASH_NOW.md  HOW_TO_ADD_FILES.md  HOW_TO_RUN.md  IMPLEMENTATION_COMPLETE.md  NEXT_STEPS_ROADMAP.md  QUICK_ADD_FILES.md  QUICK_START.md  README_INDEX.md  RENAME_MOVE_COMPLETE.md  RENAME_MOVE_GUIDE.md  RUN_GUIDE.md  VERIFICATION_GUIDE.md  build.rs  build.sh  flash.sh
sd_test/.cargo/: config.toml
sd_test/src/: main.rs
src/: main.rs  syscalls.rs  websocket_demo.rs
src/dvi/: dvi.rs  mod.rs
src/keyboard/: ps2.pio  ps2.rs
src/lib348/: control_registers.rs  mod.rs  sys_clock.rs
src/sd/: sd.rs
src/userland/: compiled.rs  elf_loader.rs  mod.rs
