[package]
name = "project"
version = "0.1.0"
authors = ["prodiggy8 <theprodiggy@protonmail.com>"]
edition = "2021"

[dependencies]
# Normal embedded rust stuff
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.1.0"
panic-probe = "1.0.0"
static_cell = "2.1.1"
portable-atomic = { version = "1.11.1", features = ["critical-section"] }

# Embassy specific stuff
embassy-embedded-hal = {version = "0.5.0", features = ["defmt"]}
embassy-executor = {version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"]}
embassy-rp = {version = "0.8.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"]}
embassy-time = {version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }

# For wireless
cyw43 = {version = "0.5.0", features=["defmt", "firmware-logs"]}
cyw43-pio = {version = "0.8.0", features = ["defmt"]}
embassy-net = {version = "0.7.1", features = ["defmt", "icmp", "tcp", "udp", "raw", "dhcpv4", "medium-ethernet", "dns", "proto-ipv4", "proto-ipv6", "multicast"]}

embedded-io-async = "0.6.1"

reqwless = { version = "0.13.0", features = ["defmt"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde-json-core = "0.6.0"

