[package]
name = "sd_test"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
rp-pico = { version = "0.9", features = ["critical-section-impl"] }
rp2040-boot2 = "0.3"
embedded-hal = "1.0"

[profile.release]
debug = 2
